Forgot to put px behind some 0's, fixed!

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,7 +132,7 @@ h3 {
     background: rgba(255, 255, 255, 0.473);
     margin-top: 1rem;
     margin-bottom: 1rem;
-    padding: 0;
+    padding: 0px;
 }
 
 /* Images styling */
@@ -161,7 +161,7 @@ img {
 }
 
 .form-control {
-    margin: 0;
+    margin: 0px;
 }
 .form-check-label {
     font-size: 1rem;
